# flue-conspiracy

./: .env.example  .gitignore  AGENTS.md  CONVERSATION_MAPPING.md  README.md  cron-jobs.md  install.sh  package-lock.json  package.json  raven.json5  tsconfig.json
.flue-vite/: _entry_server.ts
completions/: _piracy  _raven
docs/: creating-agents.md
plans/: crash-recovery.md  delivery-extraction.md  imsg.md  memory.md  scheduler.md
prompts/jobs/: active-project-daily-checkin.md  agentic-task-archetypes-nightly.md  agentic-task-archetypes-opportunities.md  artemis-ii-morning-photo.md  ashley-car-service-followup.md  bitch-read.md  blue-apron-check-reminder.md  daily-ac-state-check.md  daily-agent-auth-check.md  daily-dad-jokes.md  daily-double-trouble-photo.md  daily-overnight-rain-check.md  daily-powerless-lesson.md  daily-projects-check.md  daily-remindy-asap-prune.md  daily-vote-reminder.md  daily-weather-shift-heads-up.md  (+57 more)
scripts/: day-of-year-index  gws-gmail-stripper.sh  patch-runtime.mjs
skills/google-weather/: SKILL.md  pyproject.toml
skills/google-weather/lib/: weather.sh  weather_helper.py
src/: agent-names.ts  agent-route.ts  agent-system-context.ts  app.ts  codex.ts  config.ts  context.ts  db.ts  deliver.ts  dispatch-collect.ts  file-audit.ts  info-sources.ts  instrumentation.ts  log.ts  model-observer.ts  pending-requests.ts  sandbox.ts  session-clear.ts  session-commands.ts  session-compact.ts  session-reset.ts  telegram-attachments.ts  telegram-format.ts  telegram-tools.ts  tool-observer.ts  trace-content.ts  vault-checker.ts  working-on-it.ts
(+353 files in other folders)
