[tool.poetry]
name = "google-weather"
version = "1.2.0"
description = "Google Weather API skill for OpenClaw"
authors = []
packages = []

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.28"
google-auth = ">=2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

